--- a/portafolio.html
+++ b/portafolio.html
@@ -48,6 +48,6 @@
         </td>
       </tr>
     </table>
-    <a href="/"><h2>Volver al Inicio</h2></a>
+    <a href="https://luisfersan.github.io/cvlfersan/"><h2>Volver al Inicio</h2></a>
   </body>
 </html>
