Ajustando ítem Inicio del menu para volver a la página inicio correctamente

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br />
         <nav>
           <ul>
-            <li><a href="https://luisfersan.github.io/cvlfersan/index.html">Inicio</a></li>
+            <li><a href="https://luisfersan.github.io/cvlfersan/">Inicio</a></li>
             <li><a href="#portafolio">Portafolio</a></li>
             <li><a href="#estudios">Estudios</a></li>
             <li><a href="#experiencialab">Experiencia Laboral</a></li>
