Ajustando el footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="cabecera">
         <h1>Luis Fernando Sanchez Florez</h1>
         <br />
         <nav>
@@ -66,12 +66,9 @@
       </ul>
     </section>
 
-    <!--Inicia el footer-->
     <footer>
-      <div class="container">
-        <p>&copy; 2024 Luisfersan</p>
-      </div>
-    </footer>
+      <div id="pie">2024 &copy; By Luis Fernando</div>
+  </footer>
 
   </body>
 </html>
