Modificado por Cesar Soto, Cambio en Footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <footer>
-      <div id="pie">2024 &copy; By Luis Fernando</div>
+      <div id="pie">2024 &copy; By Luis Fernando / DesafioLatam</div>
   </footer>
 
   </body>
